[package]
name = "lumelog"
authors = ["Kyrylenko Yevhen <ceo@lineardev.net>"]
description = "A lightweight, flexible, and configurable logging library for Rust, with support for runtime configuration and build-mode detection."
license = "MIT OR Apache-2.0"
repository = "https://github.com/LinearDev/lumelog"
keywords = ["logging", "log", "debugging", "runtime-config", "structured-logging"]
categories = ["development-tools", "development-tools::debugging"]
readme = "README.md"
version = "0.1.1"
edition = "2021"
documentation = "https://docs.rs/lumalog"

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
once_cell = "1.20.2"
